# WhisperTyper

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  TODO.txt  WhisterTyper.py  config.example.json  copilot_rules.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
app/: WhisterTyper.py  __init__.py  application.py  bootstrap.py
app/audio/: __init__.py  device_selector.py  sound.py  store.py
app/core/: __init__.py  config_store.py  constants.py  dsp.py  env.py  ffmpeg.py  frameworks.py  gitutil.py  hotkeys.py  i18n.py  liveprompt.py  netutil.py  paths.py  prompts.py  redaction.py  textutil.py
app/hotkeys/: __init__.py  windows_listener.py
app/lang/: de.json  en.json  es.json  fr.json
app/mixins/: __init__.py  audio_mixin.py  clipboard_mixin.py  hotkey_mixin.py  mac_mixin.py  post_rephrase_mixin.py  settings_mixin.py  theme_mixin.py  transcription_mixin.py  tray_mixin.py  widget_attrs.py
app/resources/: main_window.ui
app/services/: __init__.py  net.py  rephrasing.py  rephrasing_worker.py  transcription_worker.py
app/ui/: __init__.py  connection_tester.py  floating_buttons.py  theme.py  tooltip.py
deploy/: app_icon.icns  deploy_mac.sh  deploy_windows.bat  macos-entitlements.plist  pyinstaller.spec
docs/: ARCHITECTURE.md  INSTALL_MACOS.md
lang/: de.json  en.json  es.json  fr.json
resources/: main_window.ui
tests/: __init__.py  manual_clipboard_image_restore.py  runtime_smoke.py  test_clipboard.py  test_config_store.py  test_dsp.py  test_ffmpeg.py  test_hotkeys.py  test_i18n_and_prompts.py  test_liveprompt.py  test_net.py  test_recording_store.py  test_redaction.py  test_rephrasing.py  test_textutil.py
utils/: create_pyinstaller_icons.py
